Fixed overflow on mobile

--- a/themes/digital.gov/src/scss/new/guides/_guide-content.scss
+++ b/themes/digital.gov/src/scss/new/guides/_guide-content.scss
@@ -1,7 +1,8 @@
 @use "uswds-core" as *;
 
-.content.usa-prose.guide {
+article.guide {
   @include u-margin-y(5);
+  @include u-overflow("hidden");
 }
 
 .usa-in-page-nav.guide {
